--- a/Loan_prediction.ipynb
+++ b/Loan_prediction.ipynb
@@ -2121,49 +2121,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Seperating training set and testing set\n",
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, r)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(406, 11)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(136, 11)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Bulding our model**\n",
+    "\n",
+    "There are various model can be used.\n",
+    "- Logistic Regression\n",
+    "- Decision Tree classifier\n",
+    "- SVC\n",
+    "- KNN \n",
+    "\n",
+    "To evaluate a model's performance, some scores have to be measured:\n",
+    "\n",
+    "- Accuracy: for a general look of the model's performance\n",
+    "- Precision: to detect the possibilty of having type 1 error\n",
+    "- recall: to detect the possibilty of having type 2 error\n",
+    "- F1_score: Overall evaluation"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-2-9f2dd85d95fe>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-9f2dd85d95fe>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    precision_score, recall_score\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Building an evaluation function\n",
+    "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
+    "def model_eval(model, true, pred):\n",
+    "    print('{} model \\nAccuracy: {} \\n Precision: {} \\nRecall: {} \\nF1_score: {}'\n",
+    "          .format(model, accuracy_score(true, pred), precision_score(true, pred),\n",
+    "                 recall_score(true, pred), f1_score(true, pred)))\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "akram \n",
+      "Ali\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('akram \\nAli')"
+   ]
   },
   {
    "cell_type": "code",
