Logistic Regression model

--- a/Loan_prediction.ipynb
+++ b/Loan_prediction.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\moham\\Anaconda3\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "C:\\Users\\moham\\Anaconda3\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "C:\\Users\\moham\\Anaconda3\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "# importing the basic required libraries \n",
     "import numpy as np\n",
@@ -16,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +55,7 @@
        "(614, 13)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +213,7 @@
        "4             1.0         Urban           Y  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +380,7 @@
        "max          1.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +472,7 @@
        "Name: Loan_Status, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +695,7 @@
        "4             1.0         Urban           Y  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +904,7 @@
        "4             1.0         Urban           Y  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +924,7 @@
        "False"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +974,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +1005,7 @@
        "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1035,7 @@
        "0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1065,7 @@
        "(542, 12)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1097,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -1248,7 +1261,7 @@
        "4         Urban           Y  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1281,7 @@
        "LabelEncoder()"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1313,7 @@
        "array([1, 0], dtype=int64)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1344,7 @@
        "array([0, 1], dtype=int64)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1375,7 @@
        "array([1, 0], dtype=int64)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1405,7 @@
        "array([0, 1], dtype=int64)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1435,7 @@
        "array([1, 0], dtype=int64)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1443,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1465,7 @@
        "array([2, 0, 1], dtype=int64)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1463,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1617,7 @@
        "4              2            1  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1615,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1659,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1657,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1679,7 @@
        "array(['0', '1', '2', '3+'], dtype=object)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1677,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1688,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1697,7 +1710,7 @@
        "array([0, 1, 2, 3], dtype=int64)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1723,13 +1736,13 @@
        "CoapplicantIncome    float64\n",
        "LoanAmount           float64\n",
        "Loan_Amount_Term     float64\n",
-       "Credit_History         int64\n",
+       "Credit_History         int32\n",
        "Property_Area          int64\n",
        "Loan_Status            int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1881,7 +1894,7 @@
        "4              2            1  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1892,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1903,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2038,7 +2051,7 @@
        "4              2  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2049,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2110,7 +2123,7 @@
        "4            1"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2121,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,7 +2145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2141,7 +2154,7 @@
        "(406, 11)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2152,7 +2165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2161,7 +2174,7 @@
        "(136, 11)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2192,23 +2205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-2-9f2dd85d95fe>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-9f2dd85d95fe>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    precision_score, recall_score\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Building an evaluation function\n",
+    "#importing necessary measures\n",
     "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
+    "#Building the function\n",
     "def model_eval(model, true, pred):\n",
-    "    print('{} model \\nAccuracy: {} \\n Precision: {} \\nRecall: {} \\nF1_score: {}'\n",
+    "    print('{} model \\nAccuracy: {} \\nPrecision: {} \\nRecall: {} \\nF1_score: {}'\n",
     "          .format(model, accuracy_score(true, pred), precision_score(true, pred),\n",
     "                 recall_score(true, pred), f1_score(true, pred)))\n",
     "    "
@@ -2216,20 +2222,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\moham\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "C:\\Users\\moham\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='warn', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Building our models\n",
+    "#logistic regression\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "logit = LogisticRegression()\n",
+    "logit.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#making predictions \n",
+    "logit_pred = logit.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "akram \n",
-      "Ali\n"
+      "LogisticRegression model \n",
+      "Accuracy: 0.8014705882352942 \n",
+      "Precision: 0.782258064516129 \n",
+      "Recall: 1.0 \n",
+      "F1_score: 0.8778280542986425\n"
      ]
     }
    ],
    "source": [
-    "print('akram \\nAli')"
+    "#evaluate the model\n",
+    "model_eval('LogisticRegression', y_test, logit_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[12, 27],\n",
+       "       [ 0, 97]], dtype=int64)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#using the confusion matrix for more details\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm = confusion_matrix(y_test, logit_pred)\n",
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the model evaluation results we can see:\n",
+    "\n",
+    "- Our model tends to be high recall(will avoid type 2 error as muc"
    ]
   },
   {
