support vector classifier

--- a/Loan_prediction.ipynb
+++ b/Loan_prediction.ipynb
@@ -2321,7 +2321,7 @@
     "From the model evaluation results we can see:\n",
     "\n",
     "- Our model tends to be high recall(will avoid type 2 error as much as possible)\n",
-    "- f1_score(harmonic mean of precision and recall) is 87%"
+    "- f1_score(harmonic mean of precision and recall) is 87.78%"
    ]
   },
   {
@@ -2408,31 +2408,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\moham\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "C:\\Users\\moham\\Anaconda3\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "    kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
+       "    shrinking=True, tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Support vector classifier\n",
+    "from sklearn.svm import SVC\n",
+    "svc = SVC()\n",
+    "svc.fit(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#making predictions\n",
+    "svc_pred = svc.predict(X_test)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC model \n",
+      "Accuracy: 0.7132352941176471 \n",
+      "Precision: 0.7132352941176471 \n",
+      "Recall: 1.0 \n",
+      "F1_score: 0.8326180257510729\n"
+     ]
+    }
+   ],
+   "source": [
+    "#model evaluation\n",
+    "model_eval('SVC', y_test, svc_pred)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Support vector classifier is also doing good when it comes to recall and type 2 error but thi"
+   ]
   },
   {
    "cell_type": "code",
